--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Pigeon</title>
+    <title>Town Square</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="town-square"></div>
     <!-- built files will be auto injected -->
   </body>
 </html>
