--- a/blog.html
+++ b/blog.html
@@ -1,10 +1,10 @@
 <html>
 <head>
   <title>Dinosaur Blog! 🦕🦖</title>
-  <link href="./node_modules/town-square/dist/town-square.css" rel="stylesheet">
+  <link href="https://cdn.rawgit.com/WillWhiteneck/Town-Square/665707b4/dist/town-square.css" rel="stylesheet">
   <style>
     .container {
-      width: 50%;
+      width: 75%;
       min-width: 300px;
       margin: 1em auto;
     }
@@ -42,7 +42,7 @@
     <div id="my-town-square"></div>
   </div>
   <script
-    src="./node_modules/town-square/dist/town-square.js"
+    src="https://cdn.rawgit.com/WillWhiteneck/Town-Square/665707b4/dist/town-square.js"
     data-thread-id="1"
     data-container-id="my-town-square">
   </script>
