fixed editor height

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Town Square</title>
+    <title>⛲ Town Square</title>
   </head>
   <body>
     <div id="town-square"></div>
