changed cdn and updated ipfs hash

--- a/blog.html
+++ b/blog.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <title>Dinosaur Blog! 🦕🦖</title>
-  <link href="https://cdn.rawgit.com/WillWhiteneck/Town-Square/665707b4/dist/town-square.css" rel="stylesheet">
+  <link href="https://gitcdn.xyz/repo/WillWhiteneck/Town-Square/master/dist/town-square.css" rel="stylesheet">
   <style>
     .container {
       width: 75%;
@@ -42,7 +42,7 @@
     <div id="my-town-square"></div>
   </div>
   <script
-    src="https://cdn.rawgit.com/WillWhiteneck/Town-Square/665707b4/dist/town-square.js"
+    src="https://gitcdn.xyz/repo/WillWhiteneck/Town-Square/master/dist/town-square.js"
     data-thread-id="2"
     data-container-id="my-town-square">
   </script>
