--- a/examples/blog.html
+++ b/examples/blog.html
@@ -1,6 +1,7 @@
 <html>
 <head>
   <title>Dinosaur Blog! 🦕🦖</title>
+  <meta charset="utf-8"/>
   <link href="https://gitcdn.xyz/repo/WillWhiteneck/Town-Square/master/dist/town-square.css" rel="stylesheet">
   <style>
     .container {
